fixed overflow text with word-wrap break-word.

--- a/react-app/src/components/Products/GetOneProduct.css
+++ b/react-app/src/components/Products/GetOneProduct.css
@@ -130,16 +130,18 @@
     border-radius:.5rem;
 }
 .star-rating-div{
-    width:25%;
+    min-width:15%;
 }
 .date-reviews-container{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: small;
+    /* min-width: 100%; */
 }
 .review-text-div-single{
     /* border:2px solid red; */
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size:small;
     font-weight:300;
-
+    word-wrap: break-word;
+    max-width:78%;
 }
